# bite-size-reader

./: .bandit  .desloppify_t2.json  .desloppify_t2_latest.json  .dockerignore  .env.example  .gitignore  .gitleaks.toml  .markdownlint-cli2.yaml  .pip-audit-ignore.txt  .pre-commit-config.yaml  .safety-project.ini  AGENTS.md  BATCH_PROCESSING_ANALYSIS.md  CHANGELOG.md  CLAUDE.md  COMMIT_MESSAGE.md  CRITICAL_FIXES_APPLIED.md  DEPLOYMENT.md  DESIGN.md  Dockerfile  Dockerfile.api  Dockerfile.chroma  ERROR_HANDLING_ANALYSIS.md  FRONTEND.md  GEMINI.md  Makefile  PROMPT.md  QUALITY_BASELINE.md  README.md  ROADMAP.md  ROADMAP_EXTERNAL_ACCESS.md  SPEC.md  TEST_COVERAGE.md  TEST_STATUS.md  URL_HANDLING_ANALYSIS.md  URL_HANDLING_SUMMARY.txt  alembic.ini  apply_mock_replacements.py  bot.py  docker-compose.monitoring.yml  (+19 more)
.claude/: settings.json  settings.local.json
.desloppify/: query.json
.docs/: ARC-01_overall_architecture.md  OVERVIEW-01_project_goals.md  README.md
.github/: dependabot.yml  pull_request_template.md
.obsidian/: app.json  community-plugins.json
app/: __init__.py  config.py  protocols.py  repositories.py
clients/cli/: README.md  pyproject.toml
clients/cli/src/bsr_cli/: client.py  config.py  exceptions.py  main.py  output.py
clients/cli/src/bsr_cli/commands/: aggregation.py  collections.py  get.py  import_export.py  tags.py
clients/cli/src/ratatoskr_cli/: __init__.py  auth.py  client.py  config.py  exceptions.py  main.py  output.py
clients/cli/src/ratatoskr_cli/commands/: actions.py  admin.py  aggregation.py  collections.py  credentials.py  get.py  import_export.py  list_cmd.py  save.py  search.py  tags.py
clients/cli/tests/: test_auth.py  test_client.py  test_commands.py  test_config.py  test_credentials_command.py  test_output.py
config/: models.yaml.example
docs/: ARCHITECTURE_PROPOSAL.md  CHANGELOG.md  DEPLOYMENT.md  FAQ.md  HEXAGONAL_ARCHITECTURE_QUICKSTART.md  MIGRATION_GUIDE.md  MOBILE_API_IMPROVEMENTS.md  MOBILE_API_README.md  MOBILE_API_SPEC.md  PHASE_1_IMPLEMENTATION_SUMMARY.md  PHASE_2_IMPLEMENTATION_SUMMARY.md  PHASE_3_IMPLEMENTATION_SUMMARY.md  PYTHON_3.13_MIGRATION.md  README.md  REFACTORING_ROADMAP.md  REFACTORING_TODO.md  ROADMAP_PRIORITIES.md  SOLID_IMPROVEMENTS.md  SPEC.md  TROUBLESHOOTING.md  architecture-review.md  ci_optimization_phase1.md  ci_optimization_phase2.md  ci_optimization_summary.md  ci_test_fixes_summary.md  claude_code_hooks.md  cocoindex.md  database_improvements.md  database_improvements_final_summary.md  database_improvements_summary.md  database_quick_start.md  environment_variables.md  mcp_server.md  model_optimization_2025.md  multi_agent_architecture.md  phase2_schema_changes.md  phase3_performance_improvements.md  rw_lock_implementation.md  server_update_guide.md
examples/: agent_pipeline_example.py  phase3_orchestrator_example.py  validate_summary_example.py
extension/: README.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
monitoring/: loki-config.yml  prometheus.yml  promtail-config.yml
openclaw-skill/: SKILL.md  config.json
rust/: Cargo.toml  README.md
rust/crates/bsr-config/: Cargo.toml
rust/crates/bsr-config/src/: lib.rs
rust/crates/bsr-interface-router/: Cargo.toml
rust/crates/bsr-interface-router/src/: lib.rs  main.rs
rust/crates/bsr-interface-router/tests/: m4_fixture_parity.rs
rust/crates/bsr-logging/: Cargo.toml
rust/crates/bsr-logging/src/: lib.rs
rust/crates/bsr-mobile-api/: Cargo.toml
rust/crates/bsr-mobile-api/src/: content_domains.rs  core_domains.rs  lib.rs  main.rs  sync_collection_domains.rs
rust/crates/bsr-mobile-api/tests/: content_domain_routes.rs  core_domain_routes.rs  sync_collection_routes.rs
rust/crates/bsr-models/: Cargo.toml
rust/crates/bsr-models/src/: lib.rs
rust/crates/bsr-persistence/: Cargo.toml
rust/crates/bsr-persistence/src/: api_content.rs  api_core.rs  api_sync_collections.rs  lib.rs  main.rs  processing.rs
rust/crates/bsr-persistence/tests/: processing_parity.rs
rust/crates/bsr-pipeline-shadow/: Cargo.toml
rust/crates/bsr-pipeline-shadow/src/: lib.rs  main.rs
rust/crates/bsr-pipeline-shadow/tests/: m3_fixture_parity.rs
rust/crates/bsr-processing-orchestrator/: Cargo.toml
rust/crates/bsr-processing-orchestrator/src/: execution.rs  lib.rs  main.rs
rust/crates/bsr-processing-orchestrator/tests/: fixture_parity.rs
rust/crates/bsr-summary-contract/: Cargo.toml
rust/crates/bsr-summary-contract/src/: lib.rs  main.rs
rust/crates/bsr-summary-contract/tests/: m2_fixture_parity.rs
rust/crates/bsr-telegram-runtime/: Cargo.toml
rust/crates/bsr-telegram-runtime/src/: lib.rs  main.rs
rust/crates/bsr-telegram-runtime/tests/: m6_command_route_parity.rs
rust/crates/bsr-worker/: Cargo.toml
rust/crates/bsr-worker/src/: lib.rs  main.rs
rust/crates/bsr-worker/tests/: chunked_fixture_parity.rs
scripts/: __init__.py  check_ci_performance.sh  check_class_size.py  check_file_size.py  class_size_baseline.json  coverage_includes.txt  create_venv.sh  file_size_baseline.json  karakeep_sync.py  maintenance.sh  remove_init_docstrings.py  replace_mocks.py  run_pre_migration_checks.sh  setup_codex_env.sh  twitter_article_live_smoke.py  verify_grpc.py
semgrep/: python-bare-except.yml  python-mutability.yml
tests/: __init__.py  conftest.py  db_helpers.py  db_helpers_async.py  mcp_test_support.py  mcp_test_utils.py  rust_bridge_helpers.py  test_academic_platform_extractor.py  test_academic_url_patterns.py  test_access_control.py  test_adapters_integration.py  test_additional_insights_formatting.py  test_admin_metrics.py  test_aggregation_rollout.py  test_allowlist_unification.py  test_api_database_dependency.py  test_api_rate_limit_and_sync.py  test_api_request_models.py  test_api_security.py  test_attachment_document_messages.py  test_attachment_pdf_messages.py  test_backup_hardening.py  test_backup_service.py  test_batch_processing.py  test_batch_relationship_analysis_service.py  test_bot_shutdown.py  test_cached_summary_responder.py  test_callback_action_presenters.py  test_callback_action_store.py  (+203 more)
(+2385 files in other folders)
