[tool.black]
line-length = 100
target-version = ["py313"]
include = '\.pyi?$'
extend-exclude = '''
/(
  data
 |build
 |dist
 |venv
)/
'''

[tool.isort]
profile = "black"
line_length = 100
combine_as_imports = true
force_grid_wrap = 0
multi_line_output = 3
include_trailing_comma = true
known_first_party = ["app", "tests"]

[tool.ruff]
line-length = 100
target-version = "py313"
exclude = [".git", "data", "build", "dist", "venv"]

[tool.ruff.lint]
select = [
  "E",     # pycodestyle errors
  "F",     # pyflakes
  "UP",    # pyupgrade
  "ASYNC", # async issues
  "N",     # pep8-naming
  "B",     # flake8-bugbear
  "C4",    # flake8-comprehensions
  "DTZ",   # flake8-datetimez
  "T10",   # flake8-debugger
  "EXE",   # flake8-executable
  "ISC",   # flake8-implicit-str-concat
  "PIE",   # flake8-pie
  "PT",    # flake8-pytest-style
  "RET",   # flake8-return
  "SIM",   # flake8-simplify
  "TID",   # flake8-tidy-imports
  "TCH",   # flake8-type-checking
  "ERA",   # eradicate (commented code)
  "PL",    # pylint
  "RUF",   # ruff-specific rules
]
ignore = [
  "E501",    # line length handled by formatter
  "PLR0913", # too many arguments
  "PLR2004", # magic value comparison
  "PLR0911", # too many return statements
  "PLR0912", # too many branches
  "PLR0915", # too many statements
  "UP046",   # prefer PEP695 type params - project allows Generic/TypeVar style
  "UP047",   # prefer PEP695 type params - project allows Generic/TypeVar style
  "BLE001",  # blind exception catch - intentional for resilience in many cases
  "FBT001",  # boolean positional arg - acceptable in many contexts
  "FBT002",  # boolean default value - acceptable in many contexts
  "FBT003",  # boolean positional value - acceptable in many contexts
  "TRY300",  # consider else block - style preference
  "S110",    # try-except-pass - sometimes appropriate for optional features
  "PLC0415", # import outside top-level - needed for circular dependencies
  "SLF001",  # private member access - sometimes necessary
  "ERA001",  # commented code - may be kept for documentation
  "RUF001",  # ambiguous unicode - false positives in Russian text
  "DTZ003",  # datetime without timezone - not always needed
  "DTZ005",  # datetime.now without tz - not always needed
  "SIM102",  # nested if - style preference, sometimes clearer
  "SIM105",  # use contextlib.suppress - style preference
  "PLW2901", # loop variable overwritten - sometimes intentional
  "RUF012",  # mutable class attributes - acceptable in many cases
  "RUF009",  # function call in dataclass defaults - safe for Logger objects
  "N818",    # exception naming - DDD naming convention
  "ASYNC109", # async timeout parameter - trio-specific, not relevant
  "B008",    # function call in argument defaults - standard FastAPI pattern
  "PLW0603", # global statement - needed for asyncio semaphore initialization
  "SIM103",  # return condition directly - sometimes if/return is clearer
  "ASYNC240", # async os.path/pathlib - not applicable, we use asyncio not trio/anyio
  "PLW0108", # lambda may be unnecessary - false positive for factory patterns
]

# Per-file ignores for test files
[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
  "S101",    # assert used - normal in tests
  "PLR2004", # magic values - acceptable in tests
  "SLF001",  # private member access - sometimes needed in tests
  "ARG001",  # unused function arguments - test fixtures
  "ARG002",  # unused method arguments - test methods
  "PLR0913", # too many arguments - test setup
  "C901",    # complex functions - test scenarios
  "PTH118",  # os.path.join - legacy test code
  "PT011",   # pytest.raises too broad - can be improved later
  "PT009",   # unittest assertions - can be migrated later
  "PT027",   # unittest-style assertRaises - using unittest.TestCase
  "UP042",   # StrEnum compatibility shim for Python 3.10
  "UP017",   # datetime.UTC compatibility shim for Python 3.10
  "PT012",   # pytest.raises complex statements - acceptable in integration tests
  "DTZ001",  # datetime() without tz - testing naive datetime handling
  "DTZ005",  # datetime.now without tz - acceptable in tests
  "E402",    # module level import not at top - needed for mocking before imports
  "N806",    # non-lowercase variable in function - mock objects use PascalCase
  "F841",    # unused variable - mock setup
  "SIM117",  # nested with statements - clearer in test setup
]
"test_*.py" = [
  "EXE001",  # shebang present - test files in root
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.mypy]
python_version = "3.13"
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = false
no_implicit_optional = false
disallow_untyped_defs = false
disallow_any_generics = false
exclude = ["data", "build", "dist", "venv", "bite-size-reader"]
# Fix for _thread.RLock internal error
plugins = []
strict_optional = false

[project]
name = "bite-size-reader"
version = "0.1.0"
description = "Telegram bot that summarizes URLs and forwarded posts via Firecrawl + OpenRouter"
requires-python = ">=3.13"
# Core dependencies: Telegram bot, HTTP, database, NLP, logging
dependencies = [
  "httpx[http2]>=0.28.1",
  "pyrogram>=2.0.106",
  "tgcrypto>=1.2.5",
  "pydantic>=2.12.5",
  "pydantic-settings>=2.12.0",
  "peewee>=3.19.0",
  "trafilatura>=2.0.0",
  "spacy>=3.8.11,<4",
  "json-repair>=0.55.1",
  "loguru>=0.7.3",
  "orjson>=3.11.6",
  "uvloop>=0.22.1",
  # spaCy language models
  "en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl",
  "ru-core-news-sm @ https://github.com/explosion/spacy-models/releases/download/ru_core_news_sm-3.8.0/ru_core_news_sm-3.8.0-py3-none-any.whl",
  "redis>=7.1.0",
  "fakeredis>=2.33.0",
  # Attachment processing: image handling + PDF extraction
  "Pillow>=11.0.0",
  "pymupdf>=1.25.0",
]

[project.optional-dependencies]
# Mobile REST API dependencies (FastAPI, JWT auth)
api = [
  "fastapi>=0.128.0",
  "uvicorn[standard]>=0.40.0",
  "starlette>=0.50.0",
  "pyjwt>=2.11.0",
  "python-multipart>=0.0.22",
]

# Machine learning dependencies (embeddings, vector search, transformers)
ml = [
  "torch>=2.10.0",
  "transformers>=5.0.0",
  "scikit-learn>=1.8.0",
  "sentence-transformers>=5.2.2",
  "chromadb>=1.4.1",
]

# YouTube video download and transcript extraction
youtube = [
  "yt-dlp>=2026.1.31",
  "youtube-transcript-api>=1.2.4",
]

# PDF export functionality
export = [
  "weasyprint>=68.0",
]

# Background task scheduling
scheduler = [
  "apscheduler>=3.11.2,<4.0.0",
]

# MCP (Model Context Protocol) server for AI agent integrations
mcp = [
  "mcp>=1.26,<2",
]

# Development dependencies
dev = [
  "hypothesis>=6.0.0",
  "isort>=7.0.0",
  "mypy>=1.19.1",
  "pre-commit>=4.5.1",
  "pytest>=9.0.2",
  "pytest-asyncio>=1.3.0",
  "pytest-benchmark>=5.0.0",
  "pyyaml>=6.0.3",
  "ruff>=0.14.14",
]

[dependency-groups]
dev = [
    "hypothesis>=6.0.0",
    "isort>=7.0.0",
    "mypy>=1.19.1",
    "openapi-spec-validator>=0.7.2",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-benchmark>=5.0.0",
    "pyyaml>=6.0.3",
    "ruff>=0.14.14",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v --tb=short --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "asyncio: marks tests that rely on pytest-asyncio",
    "chaos: marks chaos/fault-injection tests",
    "stress: marks stress/load tests",
    "benchmark: marks performance benchmark tests",
]
asyncio_default_fixture_loop_scope = "function"

[tool.coverage.run]
source = ["app"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/venv/*",
    "*/build/*",
    "*/dist/*",
]
branch = true
parallel = true

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"
