[workspace]
members = [
  "crates/bsr-config",
  "crates/bsr-logging",
  "crates/bsr-summary-contract",
  "crates/bsr-pipeline-shadow",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.0"
authors = ["Bite-Size Reader Contributors"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
