[workspace]
members = [
  "crates/bsr-config",
  "crates/bsr-logging",
  "crates/bsr-models",
  "crates/bsr-persistence",
  "crates/bsr-processing-orchestrator",
  "crates/bsr-summary-contract",
  "crates/bsr-worker",
  "crates/bsr-pipeline-shadow",
  "crates/bsr-interface-router",
  "crates/bsr-telegram-runtime",
  "crates/bsr-mobile-api",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.0"
authors = ["Bite-Size Reader Contributors"]

[workspace.dependencies]
axum = "0.8"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
grammers-client = "0.7"
jsonwebtoken = "=9.2.0"
rand = "0.8"
redis = { version = "0.28", features = ["tokio-comp", "aio"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rusqlite = { version = "0.32", features = ["bundled", "backup"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "sync", "time"] }
tonic = { version = "0.12", features = ["transport"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
