[package]
name = "bsr-persistence"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
bsr-models = { path = "../bsr-models" }
chrono.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile = "3"
