[package]
name = "bsr-processing-orchestrator"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
bsr-pipeline-shadow = { path = "../bsr-pipeline-shadow" }
bsr-persistence = { path = "../bsr-persistence" }
bsr-summary-contract = { path = "../bsr-summary-contract" }
bsr-worker = { path = "../bsr-worker" }
redis = "0.27"
regex = "1"
reqwest.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2 = "0.10"
thiserror.workspace = true
tokio.workspace = true
url = "2"
