[package]
name = "bsr-worker"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
bsr-pipeline-shadow = { path = "../bsr-pipeline-shadow" }
bsr-summary-contract = { path = "../bsr-summary-contract" }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true

[dev-dependencies]
axum.workspace = true
